# PyJsonToProto

./: README.md  pyproject.toml
py_json_to_proto/: cli.py  convert.py
tests/: test_py_json_to_proto.py
